--- a/package.json
+++ b/package.json
@@ -3,23 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.15.1",
+    "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.0.3",
-    "@types/node": "^16.11.10",
-    "@types/react": "^17.0.37",
+    "@types/jest": "^27.4.0",
+    "@types/node": "^17.0.8",
+    "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "@xstate/react": "^1.6.3",
     "bulma": "^0.9.3",
-    "firebase": "^9.5.0",
+    "firebase": "^9.6.2",
     "react": "^17.0.2",
     "react-bulma-components": "^4.0.7",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.0.2",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
-    "web-vitals": "2.1.2",
-    "xstate": "^4.26.1"
+    "web-vitals": "2.1.3",
+    "xstate": "^4.27.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -48,10 +48,11 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.3.2",
-    "@typescript-eslint/eslint-plugin": "^5.5.0",
-    "@typescript-eslint/parser": "^5.5.0",
+    "@typescript-eslint/eslint-plugin": "^5.9.0",
+    "@typescript-eslint/parser": "^5.9.0",
+    "@xstate/inspect": "^0.6.0",
     "eslint": "^7.11.0",
     "eslint-config-prettier": "^8.3.0",
-    "typescript": "^4.5.2"
+    "typescript": "^4.5.4"
   }
 }
